[tool.poetry]
name = "pposdex"
version = "3.0.0"
description = "Algorand Pure Proof of Stake Decentralization Index"
license = "MIT"
authors = ["cusma <cosimo.bassi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
algokit-utils = "^1.3.1"
docopt = "^0.6.2"
matplotlib = "^3.7.2"
py-algorand-sdk = "^2.4.0"
schema = "^0.7.5"


[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-sugar = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
